# jira-mcp

./: .gitignore  DEVLOG.md  README.md  encryption_salt  pyproject.toml
config/: claude_desktop_config.json
docs/: API-QUIRKS.md  USAGE.md  jira-mcp.md
jira_mcp/: __init__.py  field_mappings.py  jira_client.py  server.py  tools.py
jira_mcp/auth/: __init__.py  credential_manager.py
scripts/: setup_credentials.py  test_connection.py  test_phase2.py  test_phase3.py  test_phase4.py
tests/: __init__.py  test_comment.py  test_create.py  test_get.py  test_integration.py  test_search.py  test_transitions.py  test_update.py
tests/integration/: __init__.py  test_full_workflow.py
